--- a/less/elements/form.less
+++ b/less/elements/form.less
@@ -75,13 +75,9 @@ select.form-control {
     border-width: var(--input-border-width);
     border-radius: var(--border-radius);
 
-    &.in-focus {
-        border-color: var(--input-border-focus);
+    &.in-focus {        
         outline: 0;
-        .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px var(--input-border-focus-rgba)");
     }
-
-    .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
 }
 
 .input-group > .input-group-btn:not(:first-child) > .btn:first-child {
