--- a/less/fonts.less
+++ b/less/fonts.less
@@ -70,5 +70,14 @@
   src: local("Lexend Deca Black"), local("LexendDeca-Black"),
     url("@{font-path}/lexenddeca/LexendDeca-Black.ttf") format("truetype");
 }
+/* source sans pro-400 */
+@font-face {
+  font-family: "Source Code Pro";
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: 400;
+  src: local("Source Code Pro Regular"), local("SourceCodePro-Regular"),
+    url("@{font-path}/sourcecodepro/SourceCodePro-Regular.ttf") format("truetype");
+}
 
 @font-path: "../../fonts";
