--- a/less/root-variables.less
+++ b/less/root-variables.less
@@ -81,6 +81,11 @@
   --1300px: 1300px;
   --1440px: 1440px;
 
+  --font-family: @font-family;
+  --font-family-base: @font-family-base;
+  --font-family-sans-serif: @font-family-sans-serif;
+  --font-family-monospace: @font-family-monospace;
+
   --font-size-base: var(--14px);
   --font-size-large: var(--18px);
   --font-size-small: var(--12px);
