--- a/less/variables.less
+++ b/less/variables.less
@@ -73,8 +73,11 @@
 @line-height-computed: floor(@font-size-base * @line-height-base);
 @headings-line-height: 1;
 
+@font-family: "Lexend Deca", sans-serif;
+@font-family-base: "Lexend Deca", sans-serif;
 @font-family-sans-serif: "Lexend Deca", sans-serif;
-@font-family-base: @font-family-sans-serif;
+@font-family-monospace: "Source Code Pro", monospace;
+
 @headings-font-family: @font-family-base;
 
 @icon-font-path: "../../fonts/";
